--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.0.4 (2021-03-03)
+
+        * Updated nlbuild-autotools to 1.6.14.
+
 1.0.3 (2021-03-02)
 
         * Minor build system changes such that 'make dist' works correctly.
