--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.3.0 (2023-10-10)
+
+        * Added C/C++ bindings for potentially removing a trailing
+          newline from a mutable CoreFoundation string.
+
 1.2.0 (2023-09-11)
 
         * Added C/C++ bindings for merging a CoreFoundation dictionary
